<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.org.chiranz.aitem.DoctorActivity"
    tools:showIn="@layout/activity_doctor">

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="643dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/fab_margin"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/personaRegNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regno"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@+id/personRegDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/personRegDate"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/personFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@+id/personQualification"
                app:layout_constraintTop_toBottomOf="@+id/personRegDate"
                app:layout_constraintBottom_toTopOf="@+id/personQualification"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/personRegDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regdate"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@+id/personFullName"
                app:layout_constraintTop_toBottomOf="@+id/personaRegNo"
                app:layout_constraintBottom_toTopOf="@+id/personFullName"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/personQualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualification"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="@+id/personAddress"
                app:layout_constraintTop_toBottomOf="@+id/personFullName"
                app:layout_constraintBottom_toTopOf="@+id/personAddress"
                android:textColor="@color/colorBlack"
                />

            <TextView
                android:id="@+id/personAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/personQualification"
                android:textColor="@color/colorBlack"
                />

            <!--<com.google.android.gms.maps.MapView
                android:id="@+id/personMapView"
                android:layout_width="125dp"
                android:layout_height="83dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personAddress"
                app:layout_constraintBottom_toBottomOf="parent" />-->
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
